--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "reselect": "^4.1.6",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
